--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20.11.24",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
